atan operator must yield a degrees result between 0 and 360

BUG: 157497

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=772669